<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.assignment3.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow>
            <TextView
                android:text="@string/fname"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_fname"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/lname"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_lname"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/birthday"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_birthday"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/email"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_email"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/phone"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_phone"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/address"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_address"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/date"
                android:width="120dp">
            </TextView>
            <EditText
                android:id="@+id/txt_date"
                android:width="200dp"
                android:inputType="text"
                />
        </TableRow>
        <TableRow>
            <TextView />
            <CheckBox
                android:id="@+id/chk_remember_pswd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/chk_remem_user"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_login"
                android:text="@string/login_button_text"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
</ScrollView>